--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,10 @@
         }
     },
     "autoload": {
+        "files": [
+        "app/Library/Helpers/query.php",
+        "app/Library/Helpers/functions.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
